--- a/css/typoghrapy.css
+++ b/css/typoghrapy.css
@@ -1,7 +1,7 @@
 
 .deafault-tittle{
     font-size: 22px;
-    font-family:var(--font-semibold);
+    font-family:"Puvi_Bold";
     color:var(--c-black);
 }
 .deafault-tittle-sm{
