--- a/css/font.css
+++ b/css/font.css
@@ -1,17 +1,18 @@
 
 @font-face {
     font-family:"Puvi_Regular";
-    src: url("/fonts/Zoho\ Puvi\ Regular.otf");
+    src: url("../fonts/Zoho_Puvi_Regular.otf");
     font-display: swap;
 }
 @font-face {
     font-family:"Puvi_Semibold";
-    src: url("/fonts/Zoho\ Puvi\ Semibold.otf");
+    src: url("../fonts/Zoho_Puvi_Semibold.otf");
     font-display: swap;
 }
 
-
-:root{
-    --font-regular: Puvi_Regular;
-    --font-semibold:Puvi_Semibold;
+@font-face {
+    font-family:"Puvi_Bold";
+    src: url("../fonts/Zoho_Puvi_Bold.otf");
+    font-display: swap;
 }
+
